--- a/www/apps/catalog/catalog_db.html
+++ b/www/apps/catalog/catalog_db.html
@@ -1,3 +1,14 @@
 <div class="catDB">
   <h1>Database</h1>
-</div>
+  <p>Data persistence services are provided by a <a href="http://www.mongodb.org/">MongoDB</a> on the server and access using the <a href="http://dojotoolkit.org/reference-guide/dojo/data.html">dojo.data</a> interfaces on the client. 
+
+  <h2>Links</h2>
+  <ul>
+    <li><a href="http://dojotoolkit.org/reference-guide/dojo/data.html">dojo.data documentation</a></li>
+    <li><a href="http://docs.dojocampus.org/dojox/data/JsonRestStore">dojox.data.JsonRestStore documentation</a></li>
+    <li><a href="http://www.mongodb.org/display/DOCS/Home">MongoDB documentation</a></li>
+  </ul>
+
+  <h2>Examples</h2>
+  
+</p>
