JSonic link cleanup

--- a/www/apps/catalog/catalog_audio.html
+++ b/www/apps/catalog/catalog_audio.html
@@ -4,9 +4,8 @@
   <p>Speech and sound services are provided by the <a href="http://github.com/parente/jsonic">JSonic</a> library.</p>
   <h2>Links</h2>
   <ul>
-    <li><a href="http://github.com/parente/jsonic">Home page at github</a></li>
-    <li><a href="http://parente.github.com/jsonic/">Documentation</a></li>
-    <li><a href="http://github.com/parente/jsonic/downloads">Stable release</a></li>
+    <li><a href="http://github.com/parente/jsonic">JSonic project page</a></li>
+    <li><a href="http://parente.github.com/jsonic/">JSonic documentation</a></li>
   </ul>
   <h2>Examples</h2>
   
