Completed create / fetch db examples

--- a/www/apps/catalog/catalog_audio.html
+++ b/www/apps/catalog/catalog_audio.html
@@ -13,14 +13,14 @@
   </ul>
   <h2>Examples</h2>
   
-  <p>Say a greeting <button id="audio_ex1">Run</button></p>
+  <h3>Say a greeting <button id="audio_ex1">Run</button></h3>
   <div id="audio_ex1code">
     <pre><code dojoType="dojox.highlight.Code"
 >var a = uow.getAudio();
 a.say({text : "Welcome to the UNC Open Web Server!"});</code></pre>
   </div>
   
-  <p>Play a sound <button id="audio_ex2">Run</button></p>
+  <h3>Play a sound <button id="audio_ex2">Run</button></h3>
   <div id="audio_ex2code">
     <pre><code dojoType="dojox.highlight.Code"
 >var a = uow.getAudio();
