--- a/www/apps/catalog/index.html
+++ b/www/apps/catalog/index.html
@@ -15,15 +15,11 @@
             isDebug: false,
             parseOnLoad: true,
             baseUrl: './'
-            // @todo: will be handled by uow.js
-            /*modulePaths: {
-              'info.mindtrove' : '/libs/info/mindtrove',
-              'uow' : '/libs/uow'
-            }*/
         };
     </script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4.1/dojo/dojo.xd.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4.1/dijit/dijit.xd.js"></script>
+    <script type="text/javascript" src="/libs/uow/trace.js"></script>
     <script type="text/javascript" src="/libs/uow.js"></script>
     <script type="text/javascript" src="catalog.js"></script>
   </head>
