--- a/www/apps/catalog/index.html
+++ b/www/apps/catalog/index.html
@@ -34,23 +34,27 @@
            splitter="true">
         <div dojoType="dijit.layout.ContentPane" 
              id="home"
-             title="Home" 
+             title="Home"
+             preload="true"
              href="catalog_home.html"></div>
         <div dojoType="dojox.layout.ContentPane" 
              id="audio"
+             preload="true"
              title="Audio" 
              href="catalog_audio.html"></div>
         <div dojoType="dojox.layout.ContentPane" 
              id="db"
              title="Database" 
+             preload="true"
              href="catalog_db.html"></div>
         <div dojoType="dojox.layout.ContentPane" 
              id="trace"
              title="Dojo Trace" 
+             preload="true"
              href="catalog_trace.html"></div>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="bottom" splitter="false">
-        Last updated: 4/21/2010
+        Last updated: 4/24/2010
       </div>
     </div>
   </body>
