--- a/www/apps/catalog/catalog_db.html
+++ b/www/apps/catalog/catalog_db.html
@@ -1,7 +1,19 @@
 <div id="dbContainer" class="catDB">
   <script type="text/javascript">
+    dojo.require('dojo.date.stamp');
     dojo.ready(function() {
       uow.app.catalog.parseExamples('dbContainer');
+      var db = uow.getDatabase({database: 'catalog', collection : 'status'});
+      var d = dojo.date.stamp.toISOString(new Date(), {zulu : true});
+      db.newItem({from : window.location.toString(), dt: d});
+      db.save({
+        onComplete: function() {
+          uow.app.catalog.serviceStatus('Database', true);
+        },
+        onError: function() {
+          uow.app.catalog.serviceStatus('Database', false);
+        }
+      });
     });
   </script>
   <h1>Database</h1>
