Show name of server in catalog app

--- a/servers/common/catalog/catalog_home.html
+++ b/servers/common/catalog/catalog_home.html
@@ -2,6 +2,6 @@
   <h1>Home</h1>
   <p>This is the catalog page of a UNC Open Web Server instance. The purpose of this page is to demonstrate all of the services provided by the server. To view and test the available services, visit their respective tabs.</p>
   <p>Keep in mind, some of these services may require authentication or tokens to view. The information in each tab will inform you of such requirements.</p>
-  <h2>Service status</h2>
+  <h2>Available services</h2>
   <ul id="home_status"></ul>
 </div>
