--- a/servers/common/catalog/index.html
+++ b/servers/common/catalog/index.html
@@ -26,7 +26,7 @@
   <body class="tundra loading">
     <div dojoType="dijit.layout.BorderContainer" liveSplitters="true">
       <div dojoType="dijit.layout.ContentPane" region="top" splitter="false">
-        <h1>UNC Open Web - Catalog Page</h1>
+        <h1>UNC Open Web <span id="subtitle"></span></h1>
       </div>
       <div dojoType="dijit.layout.TabContainer" 
            id="tabs"
