--- a/servers/common/catalog/catalog_home.html
+++ b/servers/common/catalog/catalog_home.html
@@ -1,7 +1,6 @@
 <div class="catHome">
   <h1>Home</h1>
-  <p>This is the catalog page of a UNC Open Web Server instance. The purpose of this page is to demonstrate all of the services provided by the server. To view and test the available services, visit their respective tabs.</p>
-  <p>Keep in mind, some of these services may require authentication or tokens to view. The information in each tab will inform you of such requirements.</p>
-  <h2>Available services</h2>
+  <p>This is the catalog page of a UNC Open Web Server instance. The purpose of this page is to get you started with local development and demonstrate all of the services provided by the server. Use the links on the right to get started and view the examples.</p>
+  <h2>Service status</h2>
   <ul id="home_status"></ul>
 </div>
