--- a/servers/common/catalog/index.html
+++ b/servers/common/catalog/index.html
@@ -26,7 +26,7 @@
   <body class="tundra loading">
     <div dojoType="dijit.layout.BorderContainer" liveSplitters="true">
       <div dojoType="dijit.layout.ContentPane" region="top" splitter="false">
-        <h1>UNC Open Web <span id="subtitle"></span></h1>
+        <h1 id="title">UNC Open Web <span id="subtitle"></span></h1>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="left" splitter="false" id="nav">
         <ul>
@@ -70,7 +70,7 @@
              href="catalog_trace.html"></div>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="bottom" splitter="false">
-        Last updated: 4/24/2010
+        Last updated: 5/14/2010
       </div>
     </div>
   </body>
