Finished catalog work for issue #6
* Local test file for nginx
* Clarification about url to local directory mapping

--- a/servers/common/catalog/catalog_start.html
+++ b/servers/common/catalog/catalog_start.html
@@ -90,11 +90,11 @@
   <ol>
     <li>Right-click <a href="nginx_test.html">this test file link</a> and select <em>Save as</em>.</li>
     <li>Save the file as <em>nginx_test.html</em> in your home directory <em>Sites</em> folder.</li>
-    <li><a href="http://localhost/nginx_test.html" target="_blank">Click this link</a> to test your local setup.</li>
+    <li><a href="http://localhost/local/nginx_test.html" target="_blank">Click this link</a> to test your local setup.</li>
   </ol>
 
   <h3>Go forth and code</h3>
-  <p>The nginx configuration makes the <em>Sites</em> folder in your Mac home folder accessible via your web browser. Develop your applications in that folder or a subfolder.</p>
+  <p>The nginx configuration makes the <em>Sites</em> folder in your Mac home folder web accessible via the URL <a href="http://localhost/local">http://localhost/local</a>. Develop your applications in that folder or a subfolder.</p>
   
   <h2>Linux (Ubuntu)</h2>
   <h3>Install nginx</h3>
@@ -138,11 +138,11 @@
   <ol>
     <li>Right-click <a href="nginx_test.html">this test file link</a> and select <em>Save as</em>.</li>
     <li>Save the file as <em>nginx_test.html</em> in your home directory <em>public_html</em> folder.</li>
-    <li><a href="http://localhost/nginx_test.html" target="_blank">Click this link</a> to test your local setup.</li>
+    <li><a href="http://localhost/local/nginx_test.html" target="_blank">Click this link</a> to test your local setup.</li>
   </ol>
 
   <h3>Go forth and code</h3>
-  <p>The nginx configuration makes the <em>public_html</em> folder in your  home folder accessible via your web browser. Develop your applications in that folder or a subfolder.</p>
+  <p>The nginx configuration makes the <em>public_html</em> folder in your  home folder web accessible via the URL <a href="http://localhost/local">http://localhost/local</a>. Develop your applications in that folder or a subfolder.</p>
 
   <h2>Windows</h2>
   <h3>Install nginx</h3>
@@ -181,9 +181,9 @@
   <ol>
     <li>Right-click <a href="nginx_test.html">this test file link</a> and select <em>Save as</em>.</li>
     <li>Save the file as <em>nginx_test.html</em> in the <em>nginx/html</em> folder.</li>
-    <li><a href="http://localhost/nginx_test.html" target="_blank">Click this link</a> to test your local setup.</li>
+    <li><a href="http://localhost/local/nginx_test.html" target="_blank">Click this link</a> to test your local setup.</li>
   </ol>
 
   <h3>Go forth and code</h3>
-  <p>The nginx configuration makes the <em>nginx/html</em> folder in the root of your hard drive accessible via your web browser. Develop your applications in that folder or a subfolder.</p>
+  <p>The nginx configuration makes the <em>nginx/html</em> folder in the root of your hard drive web accessible via the URL <a href="http://localhost/local">http://localhost/local</a>. Develop your applications in that folder or a subfolder.</p>
 </div>
