Fixed some typos in the windows instructions for issue #6

--- a/servers/common/catalog/catalog_start.html
+++ b/servers/common/catalog/catalog_start.html
@@ -147,7 +147,7 @@
   <h2>Windows</h2>
   <h3>Install nginx</h3>
   <ol>
-    <li>Download the latest stable version for Windows from <a href="http://nginx.org/en/download.html">the nginx home page</a>.<li>
+    <li>Download the latest stable version for Windows from <a href="http://nginx.org/en/download.html">the nginx home page</a>.</li>
     <li>Unzip the .zip file you downloaded.</li>
     <li>Rename the unzipped folder to <em>nginx</em>.</li>
     <li>Move the <em>nginx</em> folder to the root of your hard drive (e.g., <em>C:\</em>).</li>
@@ -167,8 +167,7 @@
     <li>Click <em>Run</em>.</li>
     <li>Enter <em>cmd</em> to start the command prompt.</li>
     <li>Change to the nginx folder you moved earlier.<br/>
-    <code>c:<br/>
-    cd nginx</code></li>
+    <code>cd \nginx</code></li>
     <li>Start nginx with the command:<br />
     <code>start nginx.exe</code></li>
     <li>Stop nginx with the command:<br/>
