Fixes for issue #6
* Ubuntu config only need server section
* /local/ needs trailing slash for now

--- a/servers/common/catalog/catalog_start.html
+++ b/servers/common/catalog/catalog_start.html
@@ -94,7 +94,7 @@
   </ol>
 
   <h3>Go forth and code</h3>
-  <p>The nginx configuration makes the <em>Sites</em> folder in your Mac home folder web accessible via the URL <a href="http://localhost/local">http://localhost/local</a>. Develop your applications in that folder or a subfolder.</p>
+  <p>The nginx configuration makes the <em>Sites</em> folder in your Mac home folder web accessible via the URL <a href="http://localhost/local/">http://localhost/local/</a>. Develop your applications in that folder or a subfolder.</p>
   
   <h2>Linux (Ubuntu)</h2>
   <h3>Install nginx</h3>
@@ -142,7 +142,7 @@
   </ol>
 
   <h3>Go forth and code</h3>
-  <p>The nginx configuration makes the <em>public_html</em> folder in your  home folder web accessible via the URL <a href="http://localhost/local">http://localhost/local</a>. Develop your applications in that folder or a subfolder.</p>
+  <p>The nginx configuration makes the <em>public_html</em> folder in your  home folder web accessible via the URL <a href="http://localhost/local/">http://localhost/local/</a>. Develop your applications in that folder or a subfolder.</p>
 
   <h2>Windows</h2>
   <h3>Install nginx</h3>
@@ -184,5 +184,5 @@
   </ol>
 
   <h3>Go forth and code</h3>
-  <p>The nginx configuration makes the <em>nginx/html</em> folder in the root of your hard drive web accessible via the URL <a href="http://localhost/local">http://localhost/local</a>. Develop your applications in that folder or a subfolder.</p>
+  <p>The nginx configuration makes the <em>nginx/html</em> folder in the root of your hard drive web accessible via the URL <a href="http://localhost/local/">http://localhost/local/</a>. Develop your applications in that folder or a subfolder.</p>
 </div>
