Work on issue #8
* Zip containing simple sample app with some code comments
* Start of a catalog page with help on using the template

--- a/servers/common/catalog/index.html
+++ b/servers/common/catalog/index.html
@@ -33,6 +33,7 @@
           <li>Home</li>
           <h2>Help</h2>
           <li>Getting started</li>
+          <li>Developing web apps</li>
           <h2>Services</h2>
           <li>Audio</li>
           <li>Database</li>
@@ -54,6 +55,11 @@
              title="Getting started" 
              href="catalog_start.html"></div>
         <div dojoType="dojox.layout.ContentPane" 
+             id="app"
+             preload="true"
+             title="Developing web apps" 
+             href="catalog_app.html"></div>
+        <div dojoType="dojox.layout.ContentPane" 
              id="audio"
              preload="true"
              title="Audio" 
@@ -70,7 +76,7 @@
              href="catalog_trace.html"></div>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="bottom" splitter="false">
-        Last updated: 5/14/2010
+        Last updated: 5/22/2010
       </div>
     </div>
   </body>
