Work on issue #8
* Structure for app tutorial

--- a/servers/common/catalog/catalog_app.html
+++ b/servers/common/catalog/catalog_app.html
@@ -8,6 +8,23 @@
     <li>Unzip it in the folder you configured for development in the getting started instructions.</li>
     <li>Visit <a href="http://localhost/local/myapp">http://localhost/local/myapp</a> in your browser to view the running sample.</li>
   </ol>
+  
+  <h2>Structuring the app</h2>
+  
+  <h3>index.html</h3>
+  
+  <h3>application.js</h3>
+  
+  <h3>css/</h3>
+  
+  <h3>css/application.css</h3>
+  
+  <h3>widgets/</h3>
+  
+  <h3>widgets/templates</h3>
+  
+  <h3>widgets/nls</h3>
+  
+  <h3>Other folders</h3>
 
-  <p>More help to come. For now, look at the code comments in the various files in the sample application.</p>
 </div>
