--- a/servers/common/catalog/catalog_hark.html
+++ b/servers/common/catalog/catalog_hark.html
@@ -1,18 +1,24 @@
 <div class="catHark">
-  <h1>harkthesound.org integration</h1>
-  <p>This document describes how the harkthesound.org home page discovers games to list, launches them, and communicates with them.</p>
+  <h1><span style="color:red">DRAFT</span> harkthesound.org integration</h1>
+  <p>This document describes how the harkthesound.org home page discovers games to list, launches them, and communicates with them. It is currently a draft and subject to change.</p>
   
   <h2>Game metadata</h2>
   <p>The home page lists entries in the <em>games</em> collection of the <em>harkhome</em> database. The following JSON depicts all of the required entry fields using a Tic-Tac-Toe game as an example:</p>
   
 <pre>{
   "url" : "tictactoe",
-  "label" : "Tic-tac-toe",
-  "tags" : "2-player, speech, sound, keyboard, mouse",
-  "description" : "The classic game of tic-tac-toe.",
+  "label" : {
+    "en-us" : "Tic-tac-toe"
+  },
+  "tags" : {
+      "en-us" : "2-player, speech, sound, keyboard, mouse"
+  },
+  "description" : {
+      "en-us" : "The classic game of tic-tac-toe."
+  },
   "media" : {
-    "icon" : "/tictactoe/info/icon.png",
-    "screenshots" : ['/tictactoe/info/screenshot.png']
+      "icon" : "/tictactoe/info/icon.png",
+      "screenshots" : ['/tictactoe/info/screenshot.png']
   }
 }</pre>
 
@@ -21,6 +27,8 @@
   
   <h3>label, description, tags</h3>
   <p>These three fields are for human consumption. The <em>label</em> is the human readable title of the game. The <em>description</em> is a longer explanation of the game. The <em>tags</em> are additional keywords describing the game that one might use when searching for it.</p>
+    
+    <p>All three are objects with strings stored under standard language identifiers. The home page uses <em>dojo.locale</em> to determine which to display and falls back on <em>en-us</em> if there is no appropriate translation.</p>
   
   <h3>media</h3>
   <p>The media object contains the URL of a 96x96 pixel <em>icon</em> representing the game on the home page. It also includes an array of 320x240 pixel screenshots of the game, at least one of which appears in the game details dialog.</p>
