Issue #17, correct db return value doc

--- a/servers/common/catalog/catalog_db.html
+++ b/servers/common/catalog/catalog_db.html
@@ -56,7 +56,7 @@
     </ds>
   </dl>
   
-  <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>addCallback</tt> on the deferred to register a callback function that will receive a <a href="http://parente.github.com/jsonic/js.html#the-jsonic-interface"><tt>info.mindtrove.JSonic</tt> instance</a> for your use.</p>
+  <p>The return value is a <tt><a href="http://www.dojotoolkit.org/reference-guide/dojo/Deferred.html">dojo.Deferred</a></tt>. You should invoke <tt>addCallback</tt> on the deferred to register a callback function that will receive an instance of a <a href="http://docs.dojocampus.org/dojox/data/JsonRestStore"><tt>dojox.data.JsonRestStore</tt> subclass</a> for your use.</p>
 
   <h2>Examples</h2>
   <h3>Save a new person object in the <em>rolodex</em> collection of the <em>catalog</em> database</h3>
