Issue #18, started doc for auth methods
* Still need example code

--- a/servers/common/catalog/index.html
+++ b/servers/common/catalog/index.html
@@ -31,14 +31,16 @@
       <div dojoType="dijit.layout.ContentPane" region="left" splitter="false" id="nav">
         <ul>
           <li>Home</li>
-          <h2>Help</h2>
+          <h2>Intro</h2>
           <li>Getting started</li>
           <li>Developing web apps</li>
-          <li>harkthesound.org integration</li>
           <h2>Services</h2>
           <li>Audio</li>
+          <li>Authentication</li>
           <li>Database</li>
           <li>Dojo Trace</li>
+          <h2>Sites</h2>
+          <li>harkthesound.org integration</li>
         </ul>
       </div>
       <div dojoType="dijit.layout.StackContainer" 
@@ -61,15 +63,15 @@
              title="Developing web apps" 
              href="catalog_app.html"></div>
         <div dojoType="dojox.layout.ContentPane" 
-             id="hark"
-             preload="true"
-             title="harkthesound.org integration" 
-             href="catalog_hark.html"></div>
-        <div dojoType="dojox.layout.ContentPane" 
              id="audio"
              preload="true"
              title="Audio" 
              href="catalog_audio.html"></div>
+        <div dojoType="dojox.layout.ContentPane" 
+             id="auth"
+             preload="true"
+             title="Authentication" 
+             href="catalog_auth.html"></div>
         <div dojoType="dojox.layout.ContentPane" 
              id="db"
              title="Database" 
@@ -80,9 +82,14 @@
              title="Dojo Trace" 
              preload="true"
              href="catalog_trace.html"></div>
+        <div dojoType="dojox.layout.ContentPane" 
+             id="hark"
+             preload="true"
+             title="harkthesound.org integration" 
+             href="catalog_hark.html"></div>
       </div>
       <div dojoType="dijit.layout.ContentPane" region="bottom" splitter="false">
-        Last updated: 8/6/2010
+        Last updated: 8/19/2010
       </div>
     </div>
   </body>
