Added login to header in catalog for issue #18 example

--- a/servers/common/catalog/catalog_auth.html
+++ b/servers/common/catalog/catalog_auth.html
@@ -52,4 +52,5 @@
   <p>This method returns no value as the page always refreshes after invocation.</p>
 
   <h2>Examples</h2>
+  <p>@todo</p>
 </div>
